--- a/LPCopiers/Views/Equipment/Index.cshtml
+++ b/LPCopiers/Views/Equipment/Index.cshtml
@@ -9,33 +9,36 @@
 <div class="row">
     <div class="twelve columns">
         <p>
-            @Html.ActionLink("Create New", "Create")
+            @Html.ActionLink("Create New", "Create",null,null,new {@class = "medium primary btn" })
         </p>
-        <table>
-            <tr>
-                <th>
-                    @Html.DisplayNameFor(model => model.EngRef)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.serialNo)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.Make)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.Model)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.Company)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.Contact)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.Location)
-                </th>
-                <th></th>
-            </tr>
+        <table class="rounded">
+            <thead>
+                <tr>
+                    <th>
+                        @Html.DisplayNameFor(model => model.EngRef)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.serialNo)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.Make)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.Model)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.Company)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.Contact)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.Location)
+                    </th>
+                    <th>Actions</th>
+                </tr>
+            </thead>
+
 
             @foreach (var item in Model)
             {
@@ -62,9 +65,8 @@
                         @Html.DisplayFor(modelItem => item.Location)
                     </td>
                     <td>
-                        @Html.ActionLink("Edit", "Edit", new { id = item.EquipmentID }) |
-                        @Html.ActionLink("Details", "Details", new { id = item.EquipmentID }) |
-                        @Html.ActionLink("Delete", "Delete", new { id = item.EquipmentID })
+                        @Html.ActionLink("Edit", "Edit", new { id = item.EquipmentID}, new {@class = "medium primary btn" }) |
+                        @Html.ActionLink("Delete", "Delete", new { id = item.EquipmentID}, new {@class = "medium danger btn" })
                     </td>
                 </tr>
             }
