--- a/LPCopiers/Views/Home/Index.cshtml
+++ b/LPCopiers/Views/Home/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@{
     ViewBag.Title = "LP Copiers";
 }
-@section HeaderSCripts {
+@section HeaderScripts {
     <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=false"></script>
     <script type="text/javascript">
         function initialize() {
