--- a/LPCopiers/Views/admin/Index.cshtml
+++ b/LPCopiers/Views/admin/Index.cshtml
@@ -3,10 +3,90 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
+@{Html.RenderPartial("_header");}
+
+@{Html.RenderPartial("_AdminMenu");}
+
 <div class="row">
-    <div class="twelve columns" >
-        <h2>Admin</h2>
-        <h3>TODO:Admin Section</h3>
-        <p>@Html.ActionLink("Engineer", "Index", "Engineer")</p>
+    <div class="four columns">
+        <div class="adminInfoPanel">
+                <div class="smallChart">
+                    <canvas id="chart4" width="100" height="100"></canvas>
+                </div>
+                <div class="chartInfo">
+                    <ul>
+                        <li>Unique Visitors</li>
+                        <li>300</li>
+                    </ul>
+                </div>
+        </div>
+    </div>
+    <div class="four columns">
+        <div class="adminInfoPanel">
+            <div class="smallChart">
+                <canvas id="chart4" width="100" height="100"></canvas>
+            </div>
+            <div class="chartInfo">
+                <ul>
+                    <li>Uploaded Parts Request</li>
+                    <li>10</li>
+                </ul>
+            </div>
+        </div>
+    </div>
+    <div class="four columns">
+        <div class="adminInfoPanel">
+            <div class="smallChart">
+                <canvas id="chart4" width="100" height="100"></canvas>
+            </div>
+            <div class="chartInfo">
+                <ul>
+                    <li>Unique Visitors</li>
+                    <li>300</li>
+                </ul>
+            </div>
+        </div>
     </div>
 </div>
+
+
+<div class="row">
+    <div class="Twelve columns">
+        <canvas id="chart1" width="800" height="200"></canvas>
+    </div>
+</div>
+
+<div class="row">
+    <div class="twelve columns">
+        Other info here
+    </div>
+</div>
+    @*<div class="row">
+        <div class="four columns">
+            <canvas id="chart3" width="300" height="300"></canvas>
+        </div>
+
+        <div class="four columns">
+            <canvas id="chart2" width="300" height="300"></canvas>
+        </div>
+    </div>*@
+
+
+
+@section scripts {
+    <script src="~/Scripts/Graphs/Chart.min.js"></script>
+    <script src="~/Scripts/Graphs/GraphsData.js"></script>
+    <script type="text/javascript">
+        var ctx = $("#chart1").get(0).getContext("2d");
+        var myNewChart = new Chart(ctx).Line(chart1);
+
+        //var ctx2 = $("#chart2").get(0).getContext("2d");
+        //var myNewChart = new Chart(ctx2).Bar(chart2);
+
+        //var ctx3 = $("#chart3").get(0).getContext("2d");
+        //var myNewChart = new Chart(ctx3).Radar(chart3);
+
+        var ctx4 = $("#chart4").get(0).getContext("2d");
+        var myNewChart = new Chart(ctx4).Doughnut(chart4);
+    </script>
+}
