--- a/LPCopiers/Views/Equipment/DetailsByEngineer.cshtml
+++ b/LPCopiers/Views/Equipment/DetailsByEngineer.cshtml
@@ -8,7 +8,7 @@
 <div class="row">
     <div class="twelve">
         <p>
-            @Html.ActionLink("Create New", "Create")
+            @Html.ActionLink("Create New", "Create", null, null, new { @class = "medium primary btn" })
         </p>
         <table class="rounded">
             <tr>
@@ -61,9 +61,8 @@
                         @Html.DisplayFor(modelItem => item.Location)
                     </td>
                     <td>
-                        @Html.ActionLink("Edit", "Edit", new { id = item.EquipmentID }) |
-                        @Html.ActionLink("Details", "Details", new { id = item.EquipmentID }) |
-                        @Html.ActionLink("Delete", "Delete", new { id = item.EquipmentID })
+                        @Html.ActionLink("Edit", "Edit", new { id = item.EquipmentID, @class="medium primary btn"}) |
+                        @Html.ActionLink("Delete", "Delete", new { id = item.EquipmentID, @class="medium danger btn"})
                     </td>
                 </tr>
             }
