--- a/LPCopiers/Views/Shared/_Layout.cshtml
+++ b/LPCopiers/Views/Shared/_Layout.cshtml
@@ -6,11 +6,11 @@
         <link href="~/favicon.ico" rel="shortcut icon" type="image/x-icon" />
         <meta name="viewport" content="width=device-width" />
         <link href="~/Content/themes/base/jquery-ui.css" rel="stylesheet" />
-
         @Styles.Render("~/Content/gumby")
         @Scripts.Render("~/bundles/modernizr")
         @Styles.Render("~/Content/css") @*Rendered last to overwrite any predefined bootstrap css*@
         <link href="~/Content/mediaQueries.css" rel="stylesheet" />
+        <link href="~/Content/Accessability/standard.css" rel="stylesheet" id="styles"/>
         @RenderSection("HeaderScripts", required: false)
     </head>
 
@@ -31,7 +31,9 @@
 
 
         @Scripts.Render("~/bundles/jquery")
+        <script src="~/Scripts/StylesheetChanger.js"></script>
         @Scripts.Render("~/bundles/gumby")
         @RenderSection("scripts", required: false)
+
     </body>
 </html>
