--- a/LPCopiers/Views/Shared/_LoginPartial.cshtml
+++ b/LPCopiers/Views/Shared/_LoginPartial.cshtml
@@ -1,7 +1,7 @@
 ﻿@if (Request.IsAuthenticated) {
     <text>
        
-         @*<li>Hello, @Html.ActionLink(User.Identity.Name, "Manage", "Account", routeValues: null, htmlAttributes: new { @class = "username", title = "Manage" })!</li>*@
+         <li>@Html.ActionLink("Staff Area", "Index","Staff")</li>
         @using (Html.BeginForm("LogOff", "Account", FormMethod.Post, new { id = "logoutForm" })) {
             @Html.AntiForgeryToken()
             <li>
