--- a/LPCopiers/Views/Shared/_NavBarPartial.cshtml
+++ b/LPCopiers/Views/Shared/_NavBarPartial.cshtml
@@ -15,6 +15,9 @@
                 @*<li>@Html.ActionLink("About", "About", "Home")</li>*@
                 <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
                 @Html.Partial("_LoginPartial")
+                <li><a href="#" onclick="swapStyleSheet('/Content/Accessability/standard.css')">A</a></li>
+                <li><a href="#" onclick="swapStyleSheet('/Content/Accessability/HighContrast.css')" id="HighVisLink">A</a></li>
+                <li><a href="#" onclick="swapStyleSheet('/Content/Accessability/darkBackground.css')" id="darkLink">A</a></li>
             </ul>
         </div>
     </nav>
