edited format of admin sections and added additional tests

--- a/LPCopiers/Views/Shared/_Layout.cshtml
+++ b/LPCopiers/Views/Shared/_Layout.cshtml
@@ -31,6 +31,7 @@
 
 
         @Scripts.Render("~/bundles/jquery")
+        @Scripts.Render("~/bundles/globalize")
         <script src="~/Scripts/StylesheetChanger.js"></script>
         @Scripts.Render("~/bundles/gumby")
         @RenderSection("scripts", required: false)
