--- a/LPCopiers/Views/Account/Register.cshtml
+++ b/LPCopiers/Views/Account/Register.cshtml
@@ -9,7 +9,7 @@
         @using (Html.BeginForm())
         {
             @Html.AntiForgeryToken()
-            @Html.ValidationSummary()
+            @Html.ValidationSummary(true)
 
             <fieldset>
                 <legend>Registration Form</legend>
@@ -17,18 +17,32 @@
                     <li>
                         @Html.LabelFor(m => m.UserName)
                         @Html.TextBoxFor(m => m.UserName)
+                        @Html.ValidationMessageFor(m=> m.UserName)
                     </li>
                     <li>
                         @Html.LabelFor(m => m.Password)
                         @Html.PasswordFor(m => m.Password)
+                        @Html.ValidationMessageFor(m => m.Password)
                     </li>
                     <li>
                         @Html.LabelFor(m => m.ConfirmPassword)
                         @Html.PasswordFor(m => m.ConfirmPassword)
+                        @Html.ValidationMessageFor(m => m.ConfirmPassword)
                     </li>
                     <li>
                         @Html.LabelFor(m => m.surname)
                         @Html.TextBoxFor(m=>m.surname)
+                        @Html.ValidationMessageFor(m => m.surname)
+                    </li>
+                    <li>
+                        @Html.LabelFor(m => m.forename)
+                        @Html.TextBoxFor(m=>m.area)
+                        @Html.ValidationMessageFor(m => m.area)
+                    </li>
+                    <li>
+                        @Html.LabelFor(m=>m.contact)
+                        @Html.TextBoxFor(m=>m.contact)
+                        @Html.ValidationMessageFor(m => m.contact)
                     </li>
                 </ol>
                 <input type="submit" value="Register" class="medium secondary btn"/>
