--- a/LPCopiers/Views/User/Edit.cshtml
+++ b/LPCopiers/Views/User/Edit.cshtml
@@ -5,74 +5,58 @@
 }
 
 @{Html.RenderPartial("_header");}
+<div class="row">
+    <div class="twelve columns">
+        @using (Html.BeginForm())
+        {
+            @Html.AntiForgeryToken()
+            @Html.ValidationSummary(true)
 
-@using (Html.BeginForm()) {
-    @Html.AntiForgeryToken()
-    @Html.ValidationSummary(true)
+            <fieldset>
+                <legend>UserProfile</legend>
 
-    <fieldset>
-        <legend>UserProfile</legend>
+                @Html.HiddenFor(model => model.UserId)
 
-        @Html.HiddenFor(model => model.UserId)
+                <ul>
+                    <li class="field">
+                        @Html.LabelFor(model => model.UserName)
+                        @Html.TextBoxFor(model => model.UserName, new { @class = "narrow text input" })
+                        @Html.ValidationMessageFor(model => model.UserName)
+                    </li>
+                    <li class="field">
+                        @Html.LabelFor(model => model.surname)
+                        @Html.TextBoxFor(model => model.surname, new { @class = "narrow text input" })
+                        @Html.ValidationMessageFor(model => model.surname)
+                    </li>
+                    <li class="field">
+                        @Html.LabelFor(model => model.forename)
+                        @Html.TextBoxFor(model => model.forename, new { @class = "narrow text input" })
+                        @Html.ValidationMessageFor(model => model.forename)
+                    </li>
+                    <li class="field">
+                        @Html.LabelFor(model => model.area)
+                        @Html.TextBoxFor(model => model.area, new { @class = "narrow text input" })
+                        @Html.ValidationMessageFor(model => model.area)
+                    </li>
+                    <li class="field">
+                        @Html.LabelFor(model => model.contact)
+                        @Html.TextBoxFor(model => model.contact, new { @class = "narrow text input" })
+                        @Html.ValidationMessageFor(model => model.contact)
+                    </li>
+                </ul>
 
-        <div class="editor-label">
-            @Html.LabelFor(model => model.UserName)
-        </div>
-        <div class="editor-field">
-            @Html.EditorFor(model => model.UserName)
-            @Html.ValidationMessageFor(model => model.UserName)
-        </div>
+                <p>
+                    <input type="submit" value="Save" class="medium secondary btn" />
+                </p>
+            </fieldset>
+        }
 
-        <div class="editor-label">
-            @Html.LabelFor(model => model.engRef)
+        <div>
+            @Html.ActionLink("Back to List", "Index")
         </div>
-        <div class="editor-field">
-            @Html.EditorFor(model => model.engRef)
-            @Html.ValidationMessageFor(model => model.engRef)
-        </div>
-
-        <div class="editor-label">
-            @Html.LabelFor(model => model.surname)
-        </div>
-        <div class="editor-field">
-            @Html.EditorFor(model => model.surname)
-            @Html.ValidationMessageFor(model => model.surname)
-        </div>
-
-        <div class="editor-label">
-            @Html.LabelFor(model => model.forename)
-        </div>
-        <div class="editor-field">
-            @Html.EditorFor(model => model.forename)
-            @Html.ValidationMessageFor(model => model.forename)
-        </div>
-
-        <div class="editor-label">
-            @Html.LabelFor(model => model.area)
-        </div>
-        <div class="editor-field">
-            @Html.EditorFor(model => model.area)
-            @Html.ValidationMessageFor(model => model.area)
-        </div>
-
-        <div class="editor-label">
-            @Html.LabelFor(model => model.contact)
-        </div>
-        <div class="editor-field">
-            @Html.EditorFor(model => model.contact)
-            @Html.ValidationMessageFor(model => model.contact)
-        </div>
-
-        <p>
-            <input type="submit" value="Save" />
-        </p>
-    </fieldset>
-}
-
-<div>
-    @Html.ActionLink("Back to List", "Index")
+    </div>
 </div>
 
-@section Scripts {
-    @Scripts.Render("~/bundles/jqueryval")
-}
+        @section Scripts {
+            @Scripts.Render("~/bundles/jqueryval")
+        }
