--- a/LPCopiers/Content/Site.css
+++ b/LPCopiers/Content/Site.css
@@ -289,6 +289,35 @@ h1, h2, h3, h4, h5 {
    background: #E9E9E9;
 }
 
+/*admin section*/
+.adminInfoPanel{
+    text-align: center !important;
+    margin-top: 2em;
+    border: 1px solid #aeaeae;
+    border-bottom: 2px solid #32434D;
+    
+}
+
+.adminInfoPanelTop {
+    background-color: #65B688;
+    color: #fff;
+    font-weight: bold;
+}
+
+.messages ul li{
+    margin-top: 1em;
+    box-shadow: -1px 1px rgba(112, 185, 239, 0.50) ;
+}
+
+.mobUsers{
+
+    background-color: rgba(255, 0, 0, 0.40);
+}
+
+.desUsers {
+
+    background-color: rgba(151,187,205,0.5);
+}
 
 /*custom error css*/
 .field-validation-error {
