added modal login form and updated staff menus

--- a/LPCopiers/Views/Shared/_LoginPartial.cshtml
+++ b/LPCopiers/Views/Shared/_LoginPartial.cshtml
@@ -10,5 +10,5 @@
         }
     </text>
 } else {
-        <li class="login">@Html.ActionLink("Log in", "Login", "Account", routeValues: null, htmlAttributes: new { id = "loginLink" })</li>
+        <li class="login">@Html.ActionLink("Log in", "Login", "Account", routeValues: null, htmlAttributes: new { id = "loginLink", @class="switch", data_trigger="#loginModal" })</li>
 }
