--- a/LPCopiers/Views/Staff/_engineerMenu.cshtml
+++ b/LPCopiers/Views/Staff/_engineerMenu.cshtml
@@ -1,8 +1,8 @@
 ﻿
     <div class="four columns">
         <ul class="side-nav">
-            <li>Welcome - UserName</li>
-            <li>Manage Login Details</li>
+            <li>Welcome @User.Identity.Name</li>
+            <li>@Html.ActionLink("Manage login Details","Manage","Account")</li>
             <li>@Html.ActionLink("Wage Calculator","WageCalculator")</li>
             <li>@Html.ActionLink("Parts Request", "PartsRequest")</li>
             <li>@Html.ActionLink("Equipment Register","DetailsByEngineer","Equipment")</li>
