--- a/LPCopiers/Views/admin/_AdminMenu.cshtml
+++ b/LPCopiers/Views/admin/_AdminMenu.cshtml
@@ -1,6 +1,7 @@
-﻿<div class="four columns">
+﻿
+<div class="four columns">
     <ul class="side-nav">
-        <li>Welcome - UserName</li>
+        <li>Welcome @User.Identity.Name</li>
         <li>@Html.ActionLink("Manage Login Details","Manage","Account")</li>
         <li>@Html.ActionLink("Manage Users","Index","User")</li>
         <li>@Html.ActionLink("Manage Equipment","Index","Equipment")</li>
