--- a/LPCopiers/Views/Shared/_Layout.cshtml
+++ b/LPCopiers/Views/Shared/_Layout.cshtml
@@ -27,7 +27,7 @@
         </div>@*End of page wrap*@
 
         @Html.Partial("_FooterPartial")
-
+        @Html.Partial("_loginModal")
 
 
         @Scripts.Render("~/bundles/jquery")
